--- a/CleverBoard/Properties/Resources.resx
+++ b/CleverBoard/Properties/Resources.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="banner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banner.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="cleverboard" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -3210,8 +3214,5 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAP//JgD//yYA/4AmAP+AJgAAACYAAAAmAAAAJgAAACYAAAAmAAAAJgAA
         ACYAAAAmAAAAJgD//yYA//8mAP//JgA=
 </value>
-  </data>
-  <data name="ProgramName" xml:space="preserve">
-    <value>CleverBoard</value>
   </data>
 </root>
